deps/v8/test/message/fail/get-iterator1.out
*%(basename)s:7: TypeError: nonIterable is not a function or its return value is not iterable
[...nonIterable()];
    ^
TypeError: nonIterable is not a function or its return value is not iterable
    at *%(basename)s:7:5
